--- a/src/app/components/translate/translate.component.scss
+++ b/src/app/components/translate/translate.component.scss
@@ -3,8 +3,21 @@
 :host {
   position: fixed;
   top: 2rem;
-  right: 15rem;
   z-index: 1;
+
+  // Apply margin-right only for screens larger than 768px
+  @media (min-width: 769px) {
+    right: 16rem;
+  }
+
+  // For smaller screens
+  @media (max-width: 768px) {
+    right: 8rem;
+  }
+
+  @media (max-width: 480px) {
+    right: 8rem;
+  }
 }
 
 @keyframes float {
@@ -80,6 +93,13 @@
     white-space: nowrap;
   }
 
+  &__mobile-indicator {
+    display: none; // Hidden by default
+    font-size: 0.75rem;
+    font-weight: 700;
+    letter-spacing: 0.5px;
+  }
+
   &__indicator {
     position: absolute;
     bottom: 0;
@@ -118,15 +138,40 @@
 
   // Media queries
   @media (max-width: 768px) {
-    min-width: 7rem;
-    height: 3rem;
+    min-width: 5rem;
+    height: 2.5rem;
+    padding: 0.25rem;
+    border-radius: 20px;
 
     .translate__language {
       display: none;
     }
 
+    .translate__mobile-indicator {
+      display: block;
+      margin-left: 0;
+    }
+
     .translate__flag {
       padding: 0.25rem 0.5rem;
+      gap: 0.25rem;
+
+      .material-symbols-rounded {
+        display: none;
+      }
+    }
+  }
+
+  @media (max-width: 480px) {
+    min-width: 4.5rem;
+    height: 2.25rem;
+
+    .translate__mobile-indicator {
+      font-size: 0.7rem;
+    }
+
+    .translate__flag {
+      padding: 0.25rem;
     }
   }
 }
